Bug 1292536 - Always add horizontal padding to Reader Mode body to avoid overlap with toolbar. r=jaws
UltraBlame original commit: a9b2065fa983504a628646c742a913ec3a1a3b71

--- a/toolkit/themes/shared/aboutReader.css
+++ b/toolkit/themes/shared/aboutReader.css
@@ -3,16 +3,7 @@
 
 
 body {
-  padding: 64px 0;
-}
-
-@media (max-width: 785px) {
-  body {
-    padding-top: 64px;
-    padding-inline-end: 0;
-    padding-bottom: 64px;
-    padding-inline-start: 51px;
-  }
+  padding: 64px 51px;
 }
 
 @media print {
